changed button classes (start-quest and start-fight) to have btn-danger class; add carousel-image-overlay to comabt-story-carousel-slides

--- a/gamepage.html
+++ b/gamepage.html
@@ -26,23 +26,23 @@
 			<div class="col-xs-12">
 				<div id="story-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
 			<!-- Indicators -->
-					<ol class="carousel-indicators">
+					<!-- <ol class="carousel-indicators">
 						<li data-target="#story-carousel" data-slide-to="0" class="active"></li>
 						<li data-target="#story-carousel" data-slide-to="1"></li>
-					</ol>
+					</ol> -->
 			<!-- Wrapper for slides -->
 					<div class="main-story-carousel carousel-inner" role="listbox">
 						<div class="item active main-story-slide">
 							<div class="carousel-image-overlay">
 								<div class="carousel-caption">
-								It is a period of civil unrest and bloodshed. Several kingdoms fight a civil war over which kingdom should rule the realm. Your kingdom, <span class="highlighted-text">MYTHOS</span>, has been infiltrated by spies from the other kingdoms. Unable to trust the aid of the royal court, your King is succumbing to the hardships of war.
+								It is a period of civil unrest and bloodshed. Several kingdoms fight a civil war over which kingdom should rule the realm. Your kingdom, <span class="red-highlighted-text">MYTHOS</span>, has been infiltrated by spies from the other kingdoms. Unable to trust the aid of the royal court, your King is succumbing to the hardships of war.
 								</div>
 							</div>
 						</div>
 						<div class="item main-story-slide">
 							<div class="carousel-image-overlay">
 								<div class="carousel-caption">
-								After several unsuccessful assassination attempts to the royal family, your King approaches you to undertake a dangerous <span class="highlighted-text">Quest</span>. The King wants you to oversee and protect his only heir, as he is transported to a safer outpost, far from the reaches of the warring states.
+								After several unsuccessful assassination attempts to the royal family, your King approaches you to undertake a dangerous <span class="red-highlighted-text">Quest</span>. The King wants you to oversee and protect his only heir, as he is transported to a safer outpost, far from the reaches of the warring states.
 								<p class="button-container"><a class="btn btn-primary btn-lg start-game" role="button">Continue</a></p>
 								</div>
 							</div>
@@ -60,7 +60,7 @@
 		<div class="hero-selection row">
 			<div class="hero-selection-well col-xs-12">
 				<div class="selection-well well">
-					<p class="selection-text">Please select a <span class="highlighted-text">HERO</span> from the following character selection panel below. Choose carefully, who knows what opposition you may encounter on this journey.</p>
+					<p class="selection-text">Please select a <span class="red-highlighted-text">HERO</span> from the following character selection panel below. Choose carefully, who knows what opposition you may encounter on this journey.</p>
 				</div>
 			</div>
 			<div class="col-xs-12">
@@ -90,7 +90,7 @@
 			<div class="level-selection-well col-xs-12">
 				<div class="selection-well well">
 					<h3 class="selection-header">It's all up to you</h3>
-					<p class="selection-text">You have selected the <span class="selected-hero highlighted-text"></span>. None of the scouts that you have sent out have reported back. It is up to you to select the route you wish to take to the SAFE OUTPOST.</p>
+					<p class="selection-text">You have selected the <span class="selected-hero highlighted-text"></span>. None of the scouts that you have sent out have reported back. It is up to you to select the route you wish to take to the <span class="highlighted-text">Safe outpost</span>.</p>
 				</div>
 			</div>
 			<div class="col-xs-12">
@@ -119,7 +119,7 @@
 				<div class="selection-well well">
 					<h3 class="selection-header">Route to Safe Outpost</h3>
 					<p class="selection-text">You have chosen to travel through the <span class="selected-level highlighted-text"></span>. As you prepare to leave for your quest, an informant informs you that your King has been killed. Rumor has it that an unspeakable beast has been sent to kill the heir. Be weary, stay sharp. Who knows lies in the road ahead.</p>
-					<p class="button-container"><a class="btn btn-primary btn-lg start-quest" role="button">Start Quest</a></p>
+					<p class="button-container"><a class="btn btn-danger btn-lg start-quest" role="button">Start Quest</a></p>
 				</div>
 			</div>
 		</div><!-- End of Quest-Start row -->
@@ -131,26 +131,32 @@
 					<div class="col-xs-12">
 						<div id="combat-carousel" class="combat-story carousel slide" data-ride="carousel" data-interval="false">
 					<!-- Indicators -->
-							<ol class="carousel-indicators">
+							<!-- <ol class="carousel-indicators">
 								<li data-target="#combat-carousel" data-slide-to="0" class="active"></li>
 								<li data-target="#combat-carousel" data-slide-to="1"></li>
-							</ol>
+							</ol> -->
 					<!-- Wrapper for slides -->
 							<div class="combat-story-carousel carousel-inner" role="listbox">
 								<div class="item active combat-story-slide">
-									<div class="combat carousel-caption">
-									As you start on your quest to protect and deliver the king's son, you begin to notice that the <span class="selected-level highlighted-text"></span> is riddled with fresh corpses, a clear sign that a large, recent battle had taken place here. You take a second to observe the carnage and realize how eerily quiet it is.
+									<div class="carousel-image-overlay">
+										<div class="combat carousel-caption">
+										As you start on your quest to protect and deliver the king's son, you begin to notice that the <span class="selected-level red-highlighted-text"></span> is riddled with fresh corpses, a clear sign that a large, recent battle had taken place here. You take a second to observe the carnage and realize how eerily quiet it is.
+										</div>
 									</div>
 								</div>
 								<div class="item combat-story-slide">
-									<div class="combat carousel-caption">
-									Among the fallen, you spot one of your scouts that you sent out to seek the safest route to the <span class="highlighted-text">Outpost</span>. It is clear to you why the scout never made it back. 									
+									<div class="carousel-image-overlay">
+										<div class="combat carousel-caption">
+										Among the fallen, you spot one of your scouts that you sent out to seek the safest route to the <span class="red-highlighted-text">Outpost</span>. It is clear to you why the scout never made it back. 									
+										</div>
 									</div>
 								</div>
 								<div class="item combat-story-slide">
-									<div class="combat carousel-caption">
-									As, you make your way over to your fallen ally when you hear a loud roar exclaim, "This must be the heir to the throne of MYTHOS!" You see a <span class="randomized-villain highlighted-text"></span> emerge from the wreckage. As it draws near, it growls out, "I have come for you, BOY! Your time has come!"
-									<p class="button-container"><a class="btn btn-primary btn-lg stage-prep" role="button">Continue</a></p>
+									<div class="carousel-image-overlay">
+										<div class="combat carousel-caption">
+										As, you make your way over to your fallen ally when you hear a loud roar exclaim, "This must be the heir to the throne of MYTHOS!" You see a <span class="randomized-villain red-highlighted-text"></span> emerge from the wreckage. As it draws near, it growls out, "I have come for you, BOY! Your time has come!"
+										<p class="button-container"><a class="btn btn-primary btn-lg stage-prep" role="button">Stand Your Ground</a></p>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -167,7 +173,7 @@
 					<div class="stage-relative col-xs-12">						
 						<div id="#stage">
 							<h4 class="panel-title">
-								<p class="button-container"><a class="btn btn-danger btn-lg start-fight" role="button">Defend the Heir</a></p>
+								<p class="button-container defend-heir"><a class="btn btn-danger btn-lg start-fight" role="button">Defend the Heir</a></p>
 							</h4>
 						</div>
 	<!-- Hero combat-card -->
