Add col-xs-12 class to div encapsulating nav element

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <body>
 	<div class="container-fluid">
 		<div class="landing-page row">
-			<div class="landing-page background">
-			  <div class="image-overlay">
-			    <div class="jumbotron">
-				    <h2 id="game-title">Mythos</h2>
-				    <hr class="header-underline">			    
-				    <p class="button-container"><a class="btn btn-primary btn-lg main-title-play-button" href="gamepage.html" role="button">Start</a></p>
-			    </div>
-			  </div>
+			<div class="col-xs-12">
+				<div class="landing-page background">
+				  <div class="image-overlay">
+				    <div class="jumbotron">
+					    <h2 id="game-title">Mythos</h2>
+					    <hr class="header-underline">			    
+					    <p class="button-container"><a class="btn btn-primary btn-lg main-title-play-button" href="gamepage.html" role="button">Start</a></p>
+				    </div>
+				  </div>
+				</div>
 			</div>
 		</div>
 	</div>
