--- a/gamepage.html
+++ b/gamepage.html
@@ -13,13 +13,15 @@
 	<div class="gamepage container-fluid">
 <!-- navbar -->
 		<div class="row">
-			<nav class="navbar navbar-default">
-				<div class="container-fluid">
-					<div class="navbar-header">
-					<a class="navbar-brand" href="index.html">MYTHOS</a>
+			<div class="col-xs-12">
+				<nav class="navbar navbar-default">
+					<div class="container-fluid">
+						<div class="navbar-header">
+						<a class="navbar-brand" href="index.html">MYTHOS</a>
+						</div>
 					</div>
-				</div>
-			</nav>
+				</nav>
+			</div>
 		</div>
 <!-- story carousel -->
 		<div class="main-story-carousel row">
